<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="Get Rs.50 off on 499 (each)"
        android:textColor="@color/black"
        android:textSize="30dp"></TextView>
    <EditText
        android:id="@+id/etPhoneNumber1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:paddingTop="10dp"
        android:layout_toRightOf="@+id/ll_cc"
        android:backgroundTint="@color/colorAccent"
        android:digits="0123456789"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:gravity="center"
        android:hint="@string/hidden_Phone1"
        />

    <EditText
        android:id="@+id/etPhoneNumber2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:paddingTop="10dp"
        android:layout_toRightOf="@+id/ll_cc"
        android:backgroundTint="@color/colorAccent"
        android:digits="0123456789"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:gravity="center"
        android:hint="@string/hidden_Phone2"
        />

    <EditText
        android:id="@+id/etPhoneNumber3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:paddingTop="10dp"
        android:layout_toRightOf="@+id/ll_cc"
        android:backgroundTint="@color/colorAccent"
        android:digits="0123456789"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:gravity="center"
        android:hint="@string/hidden_Phone3"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="Total amt to be paid"
        android:textColor="@color/black"
        android:textSize="30dp"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="Rs.1350"
        android:textColor="@color/black"
        android:textSize="20dp"></TextView>

    <Button
        android:id="@+id/pay"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_style"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="6dp"
        android:paddingRight="6dp"
        android:paddingLeft="6dp"
        android:text="Pay"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />




</LinearLayout>